feat: fix response API filter trips