@@ -1,8 +1,9 @@
 package com.busify.project.trip.service.impl;
 
 import com.busify.project.bus_operator.repository.BusOperatorRepository;
-import com.busify.project.trip.dto.TripDTO;
-import com.busify.project.trip.dto.TripFilterRequestDTO;
+import com.busify.project.review.repository.ReviewRepository;
+import com.busify.project.trip.dto.response.TripFilterResponseDTO;
+import com.busify.project.trip.dto.request.TripFilterRequestDTO;
 import com.busify.project.trip.dto.response.TopOperatorRatingDTO;
 import com.busify.project.trip.dto.response.TripResponse;
 import com.busify.project.trip.entity.Trip;
@@ -12,12 +13,10 @@ import com.busify.project.trip.service.TripService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
-import java.time.Duration;
+
 import java.time.Instant;
 import java.time.ZoneId;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -27,17 +26,19 @@ public class TripServiceImpl implements TripService {
     private TripRepository tripRepository;
     @Autowired
     private BusOperatorRepository busOperatorRepository;
+    @Autowired
+    private ReviewRepository reviewRepository;
 
     @Override
-    public List<TripDTO> getAllTrips() {
+    public List<TripFilterResponseDTO> getAllTrips() {
         return tripRepository.findAll()
                 .stream()
-                .map(TripMapper::toDTO)
+                .map(trip -> TripMapper.toDTO(trip, getAverageRating(trip.getId())))
                 .collect(Collectors.toList());
     }
 
     @Override
-    public List<TripDTO> filterTrips(TripFilterRequestDTO filter) {
+    public List<TripFilterResponseDTO> filterTrips(TripFilterRequestDTO filter) {
         List<Trip> trips = tripRepository.findAll().stream()
                 .filter(trip -> filter.getRouteId() == null || trip.getRoute().getId().equals(filter.getRouteId()))
                 .filter(trip -> filter.getOperatorId() == null ||
@@ -53,11 +54,12 @@ public class TripServiceImpl implements TripService {
                 })
                 .filter(trip -> {
                     if (filter.getDurationFilter() == null || trip.getEstimatedArrivalTime() == null) return true;
-                    long durationHours = Duration.between(trip.getDepartureTime(), trip.getEstimatedArrivalTime()).toHours();
+                    long durationHours = trip.getRoute().getDefaultDurationMinutes() / 60;
                     return switch (filter.getDurationFilter()) {
                         case "LESS_THAN_3" -> durationHours < 3;
                         case "BETWEEN_3_AND_6" -> durationHours >= 3 && durationHours <= 6;
-                        case "GREATER_THAN_6" -> durationHours > 6;
+                        case "BETWEEN_6_AND_12" -> durationHours >= 6 && durationHours <= 12;
+                        case "GREATER_THAN_12" -> durationHours > 12;
                         default -> true;
                     };
                 })
@@ -72,44 +74,46 @@ public class TripServiceImpl implements TripService {
                     }
                     return true;
                 })
+                .filter(trip -> applyFilters(trip, filter))
                 .toList();
 
         return trips.stream()
-                .map(TripMapper::toDTO)
-                .toList();
+                .map(trip -> TripMapper.toDTO(trip, getAverageRating(trip.getId())))
+                .collect(Collectors.toList());
     }
 
-    public List<TripResponse> findTopUpcomingTripByOperator()
-    {
+    private boolean applyFilters(Trip trip, TripFilterRequestDTO filter) {
+        // Add any additional filtering logic here if needed
+        return true;
+    }
+
+    private Double getAverageRating(Long tripId) {
+        Double rating = reviewRepository.findAverageRatingByTripId(tripId);
+        return rating != null ? rating : 0.0;
+    }
+
+    @Override
+    public List<TripResponse> findTopUpcomingTripByOperator() {
         List<TopOperatorRatingDTO> operators = busOperatorRepository.findTopRatedOperatorId(PageRequest.of(0, 5));
 
-        List<Trip> trips = new ArrayList<>();
-
-        // Map để lưu rating của mỗi operator
         Map<Long, Double> operatorRatings = operators.stream()
                 .collect(Collectors.toMap(TopOperatorRatingDTO::getOperatorId, TopOperatorRatingDTO::getAverageRating));
-        System.out.println(operatorRatings);
 
-        for(TopOperatorRatingDTO operator : operators){
-            Trip trip = tripRepository.findUpcomingTripsByOperator(operator.getOperatorId(), Instant.now());
-            if (trip != null) {
-                trips.add(trip);
-            }
-        }
-        List<TripResponse> tripsResponses = trips.stream().map(trip -> TripResponse
-                .builder()
-                .tripId(trip.getId())
-                .operatorName(trip.getBus().getOperator().getName())
-                .arrivalTime(trip.getEstimatedArrivalTime())
-                .availableSeats(trip.getBus().getTotalSeats())
-                .departureTime(trip.getDepartureTime())
-                .status(trip.getStatus())
-                .averageRating(operatorRatings.get(trip.getBus().getOperator().getId()))
-                .build()).collect(Collectors.toList());
-        if(tripsResponses.isEmpty()){
-            return new ArrayList<>();
-        }
-        return tripsResponses;
+        List<Trip> trips = operators.stream()
+                .map(op -> tripRepository.findUpcomingTripsByOperator(op.getOperatorId(), Instant.now()))
+                .filter(Objects::nonNull)
+                .toList();
+
+        return trips.stream()
+                .map(trip -> TripResponse.builder()
+                        .tripId(trip.getId())
+                        .operatorName(trip.getBus().getOperator().getName())
+                        .arrivalTime(trip.getEstimatedArrivalTime())
+                        .availableSeats(trip.getBus().getTotalSeats())
+                        .departureTime(trip.getDepartureTime())
+                        .status(trip.getStatus())
+                        .averageRating(operatorRatings.get(trip.getBus().getOperator().getId()))
+                        .build())
+                .collect(Collectors.toList());
     }
-
 }
